--- a/src/home.css
+++ b/src/home.css
@@ -3,7 +3,11 @@
     --font: 'Poppins';
 }
 
-#title {
+body {
+    font-family: var(--font);
+}
+
+h1 {
     color: var(--textColour);
     font-family: var(--font);
 }
